 * Added `defer` flag to `PageQuerySet.specific` (Karl Hobley)
 * Snippets can now be deleted from the listing view (LB (Ben Johnston))
 * Increased max length of redirect URL field to 255 (Michael Harrison)
 * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
 * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))


2.1 (22.05.2018)
~~~~~~~~~~~~~~~~

 * Add `HelpPanel` to add HTML within an edit form (Keving Chung)
 * Added direct profile picture upload to account preferences (Daniel Chimeno, Pierre Geier, Matt Westcott)
 * Added API endpoint for finding pages by HTML path (Karl Hobley)
 * Added time zone setting to account preferences (David Moore)
 * Added Elasticsearch 6 support (Karl Hobley)
 * Persist tab hash in URL to allow direct navigation to tabs in the admin interface (Ben Weatherman)
 * Animate the chevron icon when opening sub-menus in the admin (Carlo Ascani)
 * Look through the target link and target page slug (in addition to the old slug) when searching for redirects in the admin (Michael Harrison)
 * Remove support for IE6 to IE9 from project template (Samir Shah)
 * Remove outdated X-UA-Compatible meta from admin template  (Thibaud Colas)
 * Add JavaScript source maps in production build for packaged Wagtail (Thibaud Colas)
 * Removed `assert` statements from Wagtail API (Kim Chee Leong)
 * Update `jquery-datetimepicker` dependency to make Wagtail more CSP-friendly (`unsafe-eval`) (Mike Kamermans)
 * Added error notification when running the `wagtail` command on Python <3.4 (Matt Westcott)
 * `update_index` management command now accepts a `--chunk_size` option to determine the number of items to load at once (Dave Bell)
 * Added hook `register_account_menu_item` to add new account preference items (Michael van Tellingen)
 * Added change email functionality from the account settings (Alejandro Garza, Alexs Mathilda)
 * Add request parameter to edit handlers (Rajeev J Sebastian)